--- a/test/index.html
+++ b/test/index.html
@@ -1,5 +1,4 @@
-<!doctype html>
-<html lang="zh-CN">
+<!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
@@ -9,66 +8,11 @@
     <meta name="description" content="venSticky test page">
     <meta name="author" content="zvenshy@gmail.com">
 	<title>venSticky</title>
-	<script type="text/javascript" src="./jquery.js"></script>
-	<script type="text/javascript" src="../venSticky.js"></script>
-	<script type="text/javascript">
-		$(document).ready(function () {
-			$('.sidebar ul').venSticky({scrollBox: $('.body')});
-		});
-	</script>
-	<style type="text/css">
-		.body {
-			width: 800px;
-			margin: 0 auto;
-			height: 500px;
-			border: 1px solid #000;
-			font-size: 24px;
-			position: relative;
-			overflow: scroll;
-		}
-			.sidebar {
-				border: 1px solid red;
-				height: 1600px;
-				width: 30%;
-				position: absolute;
-			}
-			.content {
-				border: 1px solid red;
-				height: 1600px;
-				width: 65%;
-				margin-left: 30%;
-			}
-	</style>
 </head>
-<body>
-	<div class="body">
-		<div class="sidebar">
-			<ul>
-				<li>itemTop</li>
-				<li>item2</li>
-				<li>item3</li>
-				<li>item4</li>
-				<li>item5</li>
-				<li>item1</li>
-				<li>item2</li>
-				<li>item3</li>
-				<li>item4</li>
-				<li>item5</li>
-				<li>item1</li>
-				<li>item2</li>
-				<li>item3</li>
-				<li>item4</li>
-				<li>item5</li>
-				<li>item1</li>
-				<li>item2</li>
-				<li>item3</li>
-				<li>item4</li>
-				<li>itemBottom</li>
-			</ul>
-		</div>
-		<div class="content">
-			<p>content</p>
-		</div>	
-	</div>
-</body>
+	<frameset rows="50%,50%">
+
+	  <frame src="example1.html">
+	  <frame src="example2.html">
+
+	</frameset>
 </html>
